# ex4_AP2023_NEW

./: .gitignore  makefile
client/: CMakeLists.txt  VectorCreation.cpp  main.cpp
server/: CMakeLists.txt  Canberra.cpp  Canberra.h  Chebyshev.cpp  Chebyshev.h  CsvReading.cpp  CsvReading.h  Euclidean.cpp  Euclidean.h  Manhattan.cpp  Manhattan.h  MasterDistance.cpp  MasterDistance.h  Minkowski.cpp  Minkowski.h  VectorBase.cpp  VectorBase.h  VectorCreation.cpp  VectorCreation.h  main.cpp
